[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpull"
version = "0.1.0"
description = "Accelerate AI/ML container startup with lazy-loading snapshotters"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "TensorFuse", email = "saurabh@tensorfuse.io"}
]
keywords = ["containers", "docker", "fastpull", "snapshotter", "ml", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/tensorfuse/fastpull"
Documentation = "https://github.com/tensorfuse/fastpull/blob/main/docs/fastpull.md"
Repository = "https://github.com/tensorfuse/fastpull"
Issues = "https://github.com/tensorfuse/fastpull/issues"

[project.scripts]
fastpull = "scripts.fastpull.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts.fastpull*"]
exclude = ["docs*", "images*"]
